// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleDropdown for file shares custom permissions inherits the parents share's permissions: 17 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-13" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-14" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares custom permissions inherits the parents share's permissions: 23 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-15" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-16" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares custom permissions inherits the parents share's permissions: 25 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-17" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-18" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when an existing role is present does not render a button if only one role is available 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-23" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-24" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when an existing role is present renders a button with existing role if given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-21" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-22" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when an existing role is present renders a button with existing role if given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-19" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-20" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when no existing role is present renders a button with invite text if no existing role given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Invite as viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-3" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-4" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when no existing role is present renders a button with invite text if no existing role given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle">
  <oc-button-stub appearance="raw" class="files-recipient-role-select-btn" gap-size="none" id="files-collaborators-role-button-new">
    <span>Invite as viewer</span>
    <oc-icon-stub name="arrow-down-s"></oc-icon-stub>
  </oc-button-stub>
  <oc-drop-stub class="files-recipient-role-drop" closeonclick="true" dropid="oc-drop-1" mode="click" offset="0" paddingsize="small" position="bottom-start" toggle="#files-collaborators-role-button-new">
    <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s oc-background-primary-gradient selected" id="files-recipient-role-drop-btn-viewer" justify-content="space-between" variation="inverse">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="eye"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <oc-icon-stub name="check"></oc-icon-stub>
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-editor" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="pencil"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" class="files-recipient-role-drop-btn oc-p-s" id="files-recipient-role-drop-btn-custom" justify-content="space-between" variation="passive">
          <span class="oc-flex oc-flex-middle">
            <oc-icon-stub class="oc-pl-s oc-pr-m" name="settings-3"></oc-icon-stub>
            <role-item-stub allowsharepermission="true" role="[object Object]"></role-item-stub>
          </span>
          <span class="oc-flex">
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <oc-drop-stub class="files-recipient-custom-permissions-drop" dropid="oc-drop-2" mode="manual" paddingsize="remove" position="bottom-start" target="#files-collaborators-role-button-new" toggle="">
    <h4 class="oc-text-bold oc-m-rm oc-px-m oc-pt-m oc-pb-s">Custom permissions</h4>
    <oc-list-stub>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" disabled="true" id="files-collaborators-permission-read" label="Read" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-update" label="Edit" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-create" label="Create" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-delete" label="Delete" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
      <li class="oc-my-s oc-px-m">
        <oc-checkbox-stub class="oc-mr-xs files-collaborators-permission-checkbox" id="files-collaborators-permission-share" label="Share" modelvalue="[object Object],[object Object]" option="[object Object]" size="large"></oc-checkbox-stub>
      </li>
    </oc-list-stub>
    <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns oc-px-m oc-py-s oc-mt-m oc-rounded-bottom">
      <oc-button-stub size="small">Cancel</oc-button-stub>
      <oc-button-stub appearance="filled" class="oc-ml-s" size="small" variation="primary">Apply</oc-button-stub>
    </div>
  </oc-drop-stub>
</span>
`;
